--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
+    "swiper": "^11.0.6",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
